# open_spiel_quoridor

./: .gitignore  README.md  multi_player.py  multi_player_random_move.py  pyproject.toml  test_tensorflow.py
alpha_zero/: README.md  alpha_zero.py  analysis.py
mcts/: quoridor_mcts.py  quoridor_mcts_optuna.py
playground/: quoridor_try.py
policies/: info.txt
testing/: play_quoridor.py
training/: .train_quoridor.py.swp  train_quoridor.py
