[tool.poetry]
name = "open_spiel_quoridor"
version = "0.1.0"
description = "Learning quoridor"
authors = ["Max Spahn <m.spahn@tudelft.nl>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
open-spiel = "^1.1.0"
pickle4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.13.8"
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
